fix: initialize only selected style guide features

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,17 @@
     <script src="https://cdn.fromdoppler.com/mfe-loader/loader-v2.0.0.js"></script>
       <script type="text/javascript">
         window['style-guide-configuration'] = {
-          autoInitialize: true,
+          initUserMenuBehavior: true,
+          initAccordionBehavior: true,
+          initModalsBehavior: true,
+          initTabsBehavior: true,
+          initDopplerPlusBehavior: true,
+          initSliderBehavior: true,
+          initNestedTableBehavior: true,
+          initTipsBehavior: true,
+          initCarouselBehavior: true,
+          initDropdownButtonBehavior: true,
+          initExitEditorButtonBehavior: true
         };
         assetServices.load({
           manifestURL: '%REACT_APP_STYLE_GUIDE_MANIFEST_FILE%'
