--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
     <script src="https://cdn.fromdoppler.com/mfe-loader/loader-v2.0.0.js"></script>
     <script type="text/javascript">
       window['style-guide-configuration'] = {
-        initUserMenuBehavior: true,
+        initUserMenuBehavior: false,
         initAccordionBehavior: true,
         initModalsBehavior: true,
         initTabsBehavior: true,
