chore: add meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Doppler</title>
+    <!-- Open Graph / Facebook / Instagram -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Doppler" />
+    <meta property="og:title" content="Marketing Multicanal, Simple e Inteligente | Doppler" />
+    <meta
+      property="og:description"
+      content="Con Doppler puedes diseñar, enviar, medir y optimizar Campañas Multicanal. Ahorra tiempo y dinero. ¡Crea tu cuenta gratis!"
+    />
+    <meta property="og:image" content="https://www.fromdoppler.com/images/share-doppler-fb.png" />
+    <meta property="og:locale" content="es_ES" />
+    <meta property="og:url" content="https://app.fromdoppler.com" />
     <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
