chore: update Open Graph URL

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     />
     <meta property="og:image" content="https://www.fromdoppler.com/images/share-doppler-fb.png" />
     <meta property="og:locale" content="es_ES" />
-    <meta property="og:url" content="https://app.fromdoppler.com" />
+    <meta property="og:url" content="https://app.fromdoppler.com/registrate" />
     <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
